# DexMachina

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATING.md  README.md  SECURITY.md  THREAT_MODEL.md  anchored_1  dexmachina.toml.default  droidforge.toml.default  pindroid.toml.default  pyproject.toml
.github/: BRANCH_PROTECTION.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  new_tool_request.yml
.github/workflows/: ci.yml  release.yml
dexmachina/: __init__.py  __main__.py  banner.py  bypass.py  cli.py  config.py  console.py  device.py  doctor.py  fix.py  help_fmt.py  installer.py  lockfile.py  medusa_modules.py  profiles.py  registry.py  runtime.py  utils.py  versions.py  workspace.py
dexmachina/scripts/: ssl_pinning_bypass.js
dexmachina/shims/: readline_win.py
docs/: RELEASE.md
droidforge/: __init__.py  __main__.py  banner.py  bypass.py  cli.py  config.py  console.py  device.py  doctor.py  fix.py  help_fmt.py  installer.py  lockfile.py  medusa_modules.py  profiles.py  registry.py  runtime.py  utils.py  versions.py  workspace.py
droidforge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
droidforge/scripts/: ssl_pinning_bypass.js
droidforge/shims/: readline_win.py
legacy/dexmachina/: README.md  pyproject.toml
legacy/dexmachina/src/dexmachina/: __init__.py  __main__.py  cli.py
pindroid/: __init__.py  __main__.py  banner.py  bypass.py  cli.py  config.py  console.py  device.py  doctor.py  fix.py  help_fmt.py  installer.py  lockfile.py  medusa_modules.py  profiles.py  progress.py  registry.py  runtime.py  utils.py  versions.py  workspace.py
pindroid/scripts/: medusa_universal_root.js  ssl_pinning_bypass.js
pindroid/shims/: __init__.py  readline_win.py
scripts/: verify_release.py
tests/: test_banner.py  test_bypass.py  test_config.py  test_config_paths.py  test_console.py  test_device.py  test_doctor_perf.py  test_fix.py  test_help.py  test_install_direct.py  test_lockfile.py  test_medusa_modules.py  test_pin_group.py  test_profiles.py  test_progress.py  test_registry.py  test_runtime.py  test_shims.py  test_utils.py  test_version_cache.py  test_versions.py  test_workspace.py
