[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pindroid"
version = "0.1.1"
description = "Android pentesting tool manager — install, update, and version-lock your toolkit"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "PinDroid Contributors" }]
keywords = ["android", "pentesting", "frida", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
    "tomli-w>=1.0",
    "packaging>=23.0",
    "requests>=2.28",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.10",
    "pytest-cov>=4.1",
]

[project.scripts]
pindroid = "pindroid.cli:main"

[project.urls]
Homepage = "https://github.com/Codeblin/pindroid"
Repository = "https://github.com/Codeblin/pindroid"
Issues = "https://github.com/Codeblin/pindroid/issues"
Documentation = "https://github.com/Codeblin/pindroid#readme"
Changelog = "https://github.com/Codeblin/pindroid/blob/main/CHANGELOG.md"
"Security Policy" = "https://github.com/Codeblin/pindroid/security/policy"

[tool.coverage.run]
source = ["pindroid"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.setuptools.packages.find]
where = ["."]
include = ["pindroid*"]

[tool.setuptools.package-data]
pindroid = ["../pindroid.toml.default", "scripts/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
